missed a few spots to assume that the values of the variable are in an array

--- a/public/app/plugins/datasource/azuremonitor/dashboards/appInsightsFailureExceptions.json
+++ b/public/app/plugins/datasource/azuremonitor/dashboards/appInsightsFailureExceptions.json
@@ -910,7 +910,7 @@
           "subscriptions": []
         }
       ],
-      "title": "Top Dependencies by Avg Duration",
+      "title": "Top Exceptions by Count",
       "transformations": [],
       "type": "table"
     },
