--- a/scripts/webpack/plugins/shared/tsconfig.json
+++ b/scripts/webpack/plugins/shared/tsconfig.json
@@ -14,5 +14,6 @@
   },
   "extends": "@grafana/tsconfig",
 
-  "exclude": ["**/*.test.ts", "**/*.test.tsx", "**/*.spec.ts", "**/*.spec.tsx"]
+  "exclude": ["**/*.test.ts", "**/*.test.tsx", "**/*.spec.ts", "**/*.spec.tsx"],
+  "include": ["./types", "."]
 }
