declare a new subresource "test" for receiver resource

--- a/apps/alerting/notifications/definitions/alerting-notifications-manifest.yaml
+++ b/apps/alerting/notifications/definitions/alerting-notifications-manifest.yaml
@@ -430,4 +430,100 @@ spec:
           type: object
       scope: Namespaced
     name: v0alpha1
+    routes:
+      namespaced:
+        /testing/integration:
+          get:
+            operationId: getIntegrationTest
+            requestBody:
+              content:
+                application/json:
+                  schema:
+                    additionalProperties: false
+                    properties:
+                      alert:
+                        $ref: '#/components/schemas/getIntegrationTestAlert'
+                      integration:
+                        $ref: '#/components/schemas/getIntegrationTestIntegration'
+                      receiver_ref:
+                        type: string
+                    required:
+                    - alert
+                    - integration
+                    type: object
+              required: true
+            responses:
+              default:
+                content:
+                  application/json:
+                    schema:
+                      additionalProperties: false
+                      properties:
+                        apiVersion:
+                          description: 'APIVersion defines the versioned schema of
+                            this representation of an object. Servers should convert
+                            recognized schemas to the latest internal value, and may
+                            reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+                          type: string
+                        duration:
+                          type: string
+                        error:
+                          type: string
+                        kind:
+                          description: 'Kind is a string value representing the REST
+                            resource this object represents. Servers may infer this
+                            from the endpoint the client submits requests to. Cannot
+                            be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+                          type: string
+                        timestamp:
+                          format: date-time
+                          type: string
+                      required:
+                      - timestamp
+                      - duration
+                      - apiVersion
+                      - kind
+                      type: object
+                description: Default OK response
+      schemas:
+        getIntegrationTestAlert:
+          additionalProperties: false
+          properties:
+            annotations:
+              additionalProperties:
+                type: string
+              type: object
+            labels:
+              additionalProperties:
+                type: string
+              type: object
+          required:
+          - labels
+          - annotations
+          type: object
+        getIntegrationTestIntegration:
+          additionalProperties: false
+          properties:
+            disableResolveMessage:
+              type: boolean
+            secureFields:
+              additionalProperties:
+                type: boolean
+              type: object
+            settings:
+              additionalProperties:
+                additionalProperties: {}
+                type: object
+              type: object
+            type:
+              type: string
+            uid:
+              type: string
+            version:
+              type: string
+          required:
+          - type
+          - version
+          - settings
+          type: object
     served: true
