--- a/packages/grafana-ui/package.json
+++ b/packages/grafana-ui/package.json
@@ -63,75 +63,75 @@
     "not IE 11"
   ],
   "dependencies": {
-    "@emotion/css": "11.13.5",
-    "@emotion/react": "11.14.0",
-    "@emotion/serialize": "1.3.3",
-    "@floating-ui/react": "0.27.16",
+    "@emotion/css": "^11.13.5",
+    "@emotion/react": "^11.14.0",
+    "@emotion/serialize": "^1.3.3",
+    "@floating-ui/react": "^0.27.16",
     "@grafana/data": "12.4.0-pre",
     "@grafana/e2e-selectors": "12.4.0-pre",
     "@grafana/faro-web-sdk": "^1.13.2",
     "@grafana/i18n": "12.4.0-pre",
     "@grafana/schema": "12.4.0-pre",
-    "@hello-pangea/dnd": "18.0.1",
-    "@monaco-editor/react": "4.7.0",
-    "@popperjs/core": "2.11.8",
-    "@rc-component/drawer": "1.3.0",
-    "@rc-component/picker": "1.7.1",
-    "@rc-component/slider": "1.0.1",
-    "@rc-component/tooltip": "1.4.0",
-    "@react-aria/dialog": "3.5.31",
-    "@react-aria/focus": "3.21.2",
-    "@react-aria/overlays": "3.30.0",
-    "@react-aria/utils": "3.31.0",
+    "@hello-pangea/dnd": "^18.0.1",
+    "@monaco-editor/react": "^4.7.0",
+    "@popperjs/core": "^2.11.8",
+    "@rc-component/drawer": "^1.3.0",
+    "@rc-component/picker": "^1.7.1",
+    "@rc-component/slider": "^1.0.1",
+    "@rc-component/tooltip": "^1.4.0",
+    "@react-aria/dialog": "^3.5.31",
+    "@react-aria/focus": "^3.21.2",
+    "@react-aria/overlays": "^3.30.0",
+    "@react-aria/utils": "^3.31.0",
     "@tanstack/react-virtual": "^3.5.1",
-    "@types/jquery": "3.5.33",
-    "@types/lodash": "4.17.20",
-    "@types/react-table": "7.7.20",
-    "calculate-size": "1.1.1",
-    "classnames": "2.5.1",
+    "@types/jquery": "^3.5.33",
+    "@types/lodash": "^4.17.20",
+    "@types/react-table": "^7.7.20",
+    "calculate-size": "^1.1.1",
+    "classnames": "^2.5.1",
     "clsx": "^2.1.1",
-    "d3": "7.9.0",
-    "date-fns": "4.1.0",
+    "d3": "^7.9.0",
+    "date-fns": "^4.1.0",
     "downshift": "^9.0.6",
-    "hoist-non-react-statics": "3.3.2",
+    "hoist-non-react-statics": "^3.3.2",
     "i18next": "^25.0.0",
     "i18next-browser-languagedetector": "^8.0.0",
-    "immutable": "5.1.4",
-    "is-hotkey": "0.2.0",
-    "jquery": "3.7.1",
+    "immutable": "^5.1.4",
+    "is-hotkey": "^0.2.0",
+    "jquery": "^3.7.1",
     "lodash": "^4.17.23",
     "micro-memoize": "^4.1.2",
-    "moment": "2.30.1",
-    "monaco-editor": "0.34.1",
-    "ol": "10.7.0",
-    "prismjs": "1.30.0",
-    "rc-cascader": "3.34.0",
+    "moment": "^2.30.1",
+    "monaco-editor": "^0.34.1",
+    "ol": "^10.7.0",
+    "prismjs": "^1.30.0",
+    "rc-cascader": "^3.34.0",
     "react-calendar": "^6.0.0",
-    "react-colorful": "5.6.1",
-    "react-custom-scrollbars-2": "4.5.0",
+    "react-colorful": "^5.6.1",
+    "react-custom-scrollbars-2": "^4.5.0",
     "react-data-grid": "grafana/react-data-grid#a922856b5ede21d55db3fdffb6d38dc76bdc7c58",
-    "react-dropzone": "14.3.8",
-    "react-highlight-words": "0.21.0",
+    "react-dropzone": "^14.3.8",
+    "react-highlight-words": "^0.21.0",
     "react-hook-form": "^7.49.2",
     "react-i18next": "^15.0.0",
-    "react-inlinesvg": "4.2.0",
-    "react-loading-skeleton": "3.5.0",
-    "react-router-dom": "5.3.4",
+    "react-inlinesvg": "^4.2.0",
+    "react-loading-skeleton": "^3.5.0",
+    "react-router-dom": "^5.3.4",
     "react-router-dom-v5-compat": "^6.26.1",
-    "react-select": "5.10.2",
-    "react-table": "7.8.0",
-    "react-transition-group": "4.4.5",
-    "react-use": "17.6.0",
-    "react-window": "1.8.11",
-    "rxjs": "7.8.2",
-    "slate": "0.47.9",
-    "slate-plain-serializer": "0.7.13",
-    "slate-react": "0.22.10",
-    "tinycolor2": "1.6.0",
-    "tslib": "2.8.1",
-    "uplot": "1.6.32",
-    "uuid": "11.1.0",
-    "uwrap": "0.1.2"
+    "react-select": "^5.10.2",
+    "react-table": "^7.8.0",
+    "react-transition-group": "^4.4.5",
+    "react-use": "^17.6.0",
+    "react-window": "^1.8.11",
+    "rxjs": "^7.8.2",
+    "slate": "^0.47.9",
+    "slate-plain-serializer": "^0.7.13",
+    "slate-react": "^0.22.10",
+    "tinycolor2": "^1.6.0",
+    "tslib": "^2.8.1",
+    "uplot": "^1.6.32",
+    "uuid": "^11.1.0",
+    "uwrap": "^0.1.2"
   },
   "devDependencies": {
     "@babel/core": "7.28.0",
