--- a/packages/grafana-prometheus/package.json
+++ b/packages/grafana-prometheus/package.json
@@ -46,8 +46,8 @@
     "postpack": "mv package.json.bak package.json"
   },
   "dependencies": {
-    "@emotion/css": "11.13.5",
-    "@floating-ui/react": "0.27.16",
+    "@emotion/css": "^11.13.5",
+    "@floating-ui/react": "^0.27.16",
     "@grafana/data": "12.4.0-pre",
     "@grafana/e2e-selectors": "12.4.0-pre",
     "@grafana/i18n": "12.4.0-pre",
@@ -55,35 +55,35 @@
     "@grafana/runtime": "12.4.0-pre",
     "@grafana/schema": "12.4.0-pre",
     "@grafana/ui": "12.4.0-pre",
-    "@hello-pangea/dnd": "18.0.1",
-    "@leeoniya/ufuzzy": "1.0.19",
-    "@lezer/common": "1.3.0",
-    "@lezer/highlight": "1.2.3",
-    "@lezer/lr": "1.4.3",
-    "@prometheus-io/lezer-promql": "0.307.3",
-    "@reduxjs/toolkit": "2.10.1",
-    "@types/debounce-promise": "3.1.9",
-    "@types/lodash": "4.17.20",
-    "@types/react": "18.3.18",
-    "@types/react-dom": "18.3.5",
-    "@types/react-highlight-words": "0.20.0",
-    "@types/react-window": "1.8.8",
-    "@types/semver": "7.7.1",
-    "@types/uuid": "10.0.0",
-    "debounce-promise": "3.1.2",
+    "@hello-pangea/dnd": "^18.0.1",
+    "@leeoniya/ufuzzy": "^1.0.19",
+    "@lezer/common": "^1.3.0",
+    "@lezer/highlight": "^1.2.3",
+    "@lezer/lr": "^1.4.3",
+    "@prometheus-io/lezer-promql": "^0.307.3",
+    "@reduxjs/toolkit": "^2.10.1",
+    "@types/debounce-promise": "^3.1.9",
+    "@types/lodash": "^4.17.20",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
+    "@types/react-highlight-words": "^0.20.0",
+    "@types/react-window": "^1.8.8",
+    "@types/semver": "^7.7.1",
+    "@types/uuid": "^10.0.0",
+    "debounce-promise": "^3.1.2",
     "lodash": "^4.17.23",
-    "moment": "2.30.1",
-    "moment-timezone": "0.5.47",
-    "monaco-editor": "0.34.1",
-    "monaco-promql": "1.8.0",
-    "pluralize": "8.0.0",
-    "prismjs": "1.30.0",
-    "react-highlight-words": "0.21.0",
-    "react-use": "17.6.0",
-    "react-window": "1.8.11",
-    "rxjs": "7.8.2",
-    "semver": "7.7.3",
-    "uuid": "11.1.0"
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.47",
+    "monaco-editor": "^0.34.1",
+    "monaco-promql": "^1.8.0",
+    "pluralize": "^8.0.0",
+    "prismjs": "^1.30.0",
+    "react-highlight-words": "^0.21.0",
+    "react-use": "^17.6.0",
+    "react-window": "^1.8.11",
+    "rxjs": "^7.8.2",
+    "semver": "^7.7.3",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@rollup/plugin-dynamic-import-vars": "2.1.5",
