--- a/packages/grafana-flamegraph/package.json
+++ b/packages/grafana-flamegraph/package.json
@@ -51,17 +51,17 @@
     "not IE 11"
   ],
   "dependencies": {
-    "@emotion/css": "11.13.5",
+    "@emotion/css": "^11.13.5",
     "@grafana/data": "12.4.0-pre",
     "@grafana/ui": "12.4.0-pre",
-    "@leeoniya/ufuzzy": "1.0.19",
+    "@leeoniya/ufuzzy": "^1.0.19",
     "d3": "^7.8.5",
     "lodash": "^4.17.23",
-    "react": "18.3.1",
-    "react-use": "17.6.0",
-    "react-virtualized-auto-sizer": "1.0.26",
-    "tinycolor2": "1.6.0",
-    "tslib": "2.8.1"
+    "react": "^18.3.1",
+    "react-use": "^17.6.0",
+    "react-virtualized-auto-sizer": "^1.0.26",
+    "tinycolor2": "^1.6.0",
+    "tslib": "^2.8.1"
   },
   "devDependencies": {
     "@babel/core": "7.28.0",
