--- a/packages/grafana-e2e-selectors/package.json
+++ b/packages/grafana-e2e-selectors/package.json
@@ -57,7 +57,7 @@
   },
   "dependencies": {
     "semver": "^7.7.0",
-    "tslib": "2.8.1",
-    "typescript": "5.9.2"
+    "tslib": "^2.8.1",
+    "typescript": "^5.9.2"
   }
 }
