--- a/packages/grafana-data/package.json
+++ b/packages/grafana-data/package.json
@@ -63,33 +63,33 @@
     "themes-schema": "tsx ./scripts/generateSchema.ts"
   },
   "dependencies": {
-    "@braintree/sanitize-url": "7.0.1",
+    "@braintree/sanitize-url": "^7.0.1",
     "@grafana/i18n": "12.4.0-pre",
     "@grafana/schema": "12.4.0-pre",
-    "@leeoniya/ufuzzy": "1.0.19",
+    "@leeoniya/ufuzzy": "^1.0.19",
     "@types/d3-interpolate": "^3.0.0",
-    "@types/string-hash": "1.1.3",
-    "@types/systemjs": "6.15.3",
-    "d3-interpolate": "3.0.1",
-    "d3-scale-chromatic": "3.1.0",
-    "date-fns": "4.1.0",
-    "dompurify": "3.3.0",
-    "eventemitter3": "5.0.1",
-    "fast_array_intersect": "1.1.0",
-    "history": "4.10.1",
+    "@types/string-hash": "^1.1.3",
+    "@types/systemjs": "^6.15.3",
+    "d3-interpolate": "^3.0.1",
+    "d3-scale-chromatic": "^3.1.0",
+    "date-fns": "^4.1.0",
+    "dompurify": "^3.3.0",
+    "eventemitter3": "^5.0.1",
+    "fast_array_intersect": "^1.1.0",
+    "history": "^4.10.1",
     "lodash": "^4.17.23",
-    "marked": "16.3.0",
-    "marked-mangle": "1.1.12",
-    "moment": "2.30.1",
-    "moment-timezone": "0.5.47",
-    "ol": "10.7.0",
-    "papaparse": "5.5.3",
-    "react-use": "17.6.0",
-    "rxjs": "7.8.2",
+    "marked": "^16.3.0",
+    "marked-mangle": "^1.1.12",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.47",
+    "ol": "^10.7.0",
+    "papaparse": "^5.5.3",
+    "react-use": "^17.6.0",
+    "rxjs": "^7.8.2",
     "string-hash": "^1.1.3",
-    "tinycolor2": "1.6.0",
-    "tslib": "2.8.1",
-    "uplot": "1.6.32",
+    "tinycolor2": "^1.6.0",
+    "tslib": "^2.8.1",
+    "uplot": "^1.6.32",
     "xss": "^1.0.14",
     "zod": "^4.3.0"
   },
