--- a/packages/grafana-alerting/package.json
+++ b/packages/grafana-alerting/package.json
@@ -92,11 +92,11 @@
     "react-dom": "^18.0.0"
   },
   "dependencies": {
-    "@emotion/css": "11.13.5",
+    "@emotion/css": "^11.13.5",
     "@faker-js/faker": "^9.8.0",
     "@grafana/api-clients": "12.4.0-pre",
     "@grafana/i18n": "12.4.0-pre",
-    "@reduxjs/toolkit": "2.10.1",
+    "@reduxjs/toolkit": "^2.10.1",
     "fishery": "^2.3.1",
     "lodash": "^4.17.21",
     "tinycolor2": "^1.6.0"
