--- a/packages/grafana-ui/package.json
+++ b/packages/grafana-ui/package.json
@@ -182,7 +182,7 @@
     "common-tags": "1.8.2",
     "core-js": "3.44.0",
     "css-loader": "7.1.2",
-    "csstype": "3.1.3",
+    "csstype": "^3.1.3",
     "esbuild": "0.25.8",
     "expose-loader": "5.0.1",
     "fs-extra": "^11.2.0",
