Re-pin @braintree/sanitize-url to resolve test issues
https://github.com/braintree/sanitize-url/issues/75
https://github.com/braintree/sanitize-url/issues/78

--- a/packages/grafana-data/package.json
+++ b/packages/grafana-data/package.json
@@ -63,7 +63,7 @@
     "themes-schema": "tsx ./scripts/generateSchema.ts"
   },
   "dependencies": {
-    "@braintree/sanitize-url": "^7.0.1",
+    "@braintree/sanitize-url": "7.0.1",
     "@grafana/i18n": "12.4.0-pre",
     "@grafana/schema": "12.4.0-pre",
     "@leeoniya/ufuzzy": "^1.0.19",
