--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -73,6 +73,16 @@
       "args": ["server", "target", "--homepath", "${workspaceFolder}", "--packaging", "dev"]
     },
     {
+      "name": "Run Search Server",
+      "type": "go",
+      "request": "launch",
+      "mode": "auto",
+      "program": "${workspaceFolder}/pkg/cmd/grafana/",
+      "env": { "GF_DEFAULT_TARGET": "search-server", "GF_SERVER_HTTP_PORT": "3002" },
+      "cwd": "${workspaceFolder}",
+      "args": ["server", "target", "--homepath", "${workspaceFolder}", "--packaging", "dev"]
+    },
+    {
       "name": "Run Authz server",
       "type": "go",
       "request": "launch",
