change snapshots to new url from test config

--- a/pkg/services/ngalert/api/test-data/receiver-exports/redacted/all-integrations.yaml
+++ b/pkg/services/ngalert/api/test-data/receiver-exports/redacted/all-integrations.yaml
@@ -997,7 +997,7 @@ contactPoints:
                 clientCertificate: '[REDACTED]'
                 clientKey: '[REDACTED]'
                 insecureSkipVerify: false
-            url: http://localhost
+            url: grafana://noop
             username: test-user
           disableResolveMessage: true
         - uid: wecom-uid
