--- a/pkg/services/ngalert/api/test-data/receiver-exports/unredacted/all-integrations.yaml
+++ b/pkg/services/ngalert/api/test-data/receiver-exports/unredacted/all-integrations.yaml
@@ -1041,7 +1041,7 @@ contactPoints:
                     EKTcWGekdmdDPsHloRNtsiCa697B2O9IFA==
                     -----END EC PRIVATE KEY-----
                 insecureSkipVerify: false
-            url: http://localhost
+            url: grafana://noop
             username: test-user
           disableResolveMessage: false
         - uid: wecom-uid
