--- a/.github/workflows/test-ci-instrumentation-workflow.yml
+++ b/.github/workflows/test-ci-instrumentation-workflow.yml
@@ -166,10 +166,10 @@ jobs:
       - uses: paper2/github-actions-opentelemetry@main
         env:
           OTEL_SERVICE_NAME: test-gha-otel-export
-          OTEL_EXPORTER_OTLP_METRICS_ENDPOINT: "https://otlp-gateway-ops-eu-south-0.grafana-ops.net/otlp/v1/metrics"
-          OTEL_EXPORTER_OTLP_TRACES_ENDPOINT: "https://otlp-gateway-ops-eu-south-0.grafana-ops.net/otlp/v1/traces"
+#          OTEL_EXPORTER_OTLP_METRICS_ENDPOINT: "https://otlp-gateway-ops-eu-south-0.grafana-ops.net/otlp/v1/metrics"
+#          OTEL_EXPORTER_OTLP_TRACES_ENDPOINT: "https://otlp-gateway-ops-eu-south-0.grafana-ops.net/otlp/v1/traces"
           OTEL_EXPORTER_OTLP_PROTOCOL: "http/protobuf"
-          OTEL_EXPORTER_OTLP_ENDPOINT: "https://otlp-gateway-ops-eu-south-0.grafana-ops.net"
+          OTEL_EXPORTER_OTLP_ENDPOINT: "https://otlp-gateway-ops-eu-south-0.grafana-ops.net/otlp"
           OTEL_EXPORTER_OTLP_HEADERS: "Authorization=Basic ${{ env.OTEL_EXPORTER_OTLP_API_KEY }}"
           OTEL_RESOURCE_ATTRIBUTES: team=grafanabackend,env=cd
         with:
