Alerting: Add support for Alerting UI configuration and visibility

--- a/conf/defaults.ini
+++ b/conf/defaults.ini
@@ -1310,6 +1310,9 @@ alerting_rule_evaluation_results = -1
 # Enable the Alerting sub-system and interface.
 enabled =
 
+# Enable the Alerting UI.
+ui_enabled =
+
 # Comma-separated list of organization IDs for which to disable unified alerting. Only supported if unified alerting is enabled.
 disabled_orgs =
 
