--- a/conf/sample.ini
+++ b/conf/sample.ini
@@ -1276,6 +1276,9 @@
 #Enable the Unified Alerting sub-system and interface. When enabled we'll migrate all of your alert rules and notification channels to the new system. New alert rules will be created and your notification channels will be converted into an Alertmanager configuration. Previous data is preserved to enable backwards compatibility but new data is removed.```
 ;enabled = true
 
+# Enable the Alerting UI.
+;ui_enabled = true
+
 # Comma-separated list of organization IDs for which to disable unified alerting. Only supported if unified alerting is enabled.
 ;disabled_orgs =
 
