feat: enable Grafana-managed alert rules creation and update related configurations

--- a/conf/defaults.ini
+++ b/conf/defaults.ini
@@ -1313,6 +1313,9 @@ enabled =
 # Comma-separated list of organization IDs for which to disable unified alerting. Only supported if unified alerting is enabled.
 disabled_orgs =
 
+# Enable creation of Grafana-managed alert rules. When set to false, you can still view Grafana-managed rules.
+grafana_managed_alerts_enabled = true
+
 # Specify how long to wait for the alerting service to initialize
 initialization_timeout = 30s
 
