--- a/conf/sample.ini
+++ b/conf/sample.ini
@@ -1279,6 +1279,9 @@
 # Comma-separated list of organization IDs for which to disable unified alerting. Only supported if unified alerting is enabled.
 ;disabled_orgs =
 
+# Enable creation of Grafana-managed alert rules. When set to false, you can still view Grafana-managed rules.
+;grafana_managed_alerts_enabled = true
+
 # Specify how long to wait for the alerting service to initialize
 ;initialization_timeout = 30s
 
