fix zizmor check

--- a/.github/workflows/pr-frontend-backend-separation.yml
+++ b/.github/workflows/pr-frontend-backend-separation.yml
@@ -22,10 +22,12 @@ jobs:
 
       - name: Get changed files
         id: changed-files
+        env:
+          BASE_SHA: ${{ github.event.pull_request.base.sha }}
+          HEAD_SHA: ${{ github.event.pull_request.head.sha }}
         run: |
           # Get the list of changed files in the PR
-          BASE_REF="${{ github.base_ref }}"
-          CHANGED_FILES=$(git diff --name-only "origin/${BASE_REF}...HEAD")
+          CHANGED_FILES=$(git diff --name-only "${BASE_SHA}...${HEAD_SHA}")
 
           # Save to output using grouped redirects
           {
