Chore: add local dev setup skills
Capture initial setup and dev-server commands as reusable Cursor skills for the repo.

--- a/.gitignore
+++ b/.gitignore
@@ -70,6 +70,10 @@ public/css/*.min.css
 !.vscode/launch.json
 .vs/
 .cursor/
+!.cursor/
+.cursor/*
+!.cursor/skills/
+!.cursor/skills/**
 .devcontainer/
 .claude/
 
