Chore: ignore generated theme schema

--- a/.gitignore
+++ b/.gitignore
@@ -181,6 +181,7 @@ pkg/services/quota/quotaimpl/storage/storage.json
 
 # Ignore frontend build manifest
 manifest.json
+/packages/grafana-data/src/themes/schema.generated.json
 
 # Ignore go local build dependencies
 /scripts/go/bin/**
