add a fallback to bundled plugins loading in case installation doesnt work

--- a/conf/defaults.ini
+++ b/conf/defaults.ini
@@ -1961,6 +1961,9 @@ update_strategy = minor
 # Enable automatic updates for preinstalled plugins on startup.
 # When enabled, preinstalled plugins without a pinned version will be updated to the latest version.
 preinstall_auto_update = true
+# Path to bundled plugins (pre-installed in image).
+# These plugins are used as fallback when preinstall fails for defaultPreinstallPlugins.
+bundled_plugins_path = /usr/share/grafana/plugins-bundled
 
 #################################### Grafana Live ##########################################
 [live]
