chore: change codeowners of dashboard search

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -379,8 +379,12 @@
 /pkg/tsdb/influxdb/ @grafana/partner-datasources
 /pkg/tsdb/graphite/ @grafana/partner-datasources
 
-# Database migrations
+# Grafana search and storage
 /pkg/services/sqlstore/migrations/ @grafana/grafana-search-and-storage
+/pkg/services/grpcserver/ @grafana/grafana-search-and-storage
+/pkg/registry/apis/dashboard/search.go @grafana/grafana-search-and-storage
+/pkg/registry/apis/dashboard/search_test.go @grafana/grafana-search-and-storage
+/apps/dashboard/pkg/apis/dashboard/v0alpha1/search.go @grafana/grafana-search-and-storage
 *_mig.go @grafana/grafana-search-and-storage
 
 # Grafana app platform
@@ -388,7 +392,6 @@
 /pkg/services/store/ @grafana/grafana-app-platform-squad
 /pkg/infra/filestorage/ @grafana/grafana-app-platform-squad
 /pkg/modules/ @grafana/grafana-app-platform-squad
-/pkg/services/grpcserver/ @grafana/grafana-search-and-storage
 /pkg/generated @grafana/grafana-app-platform-squad
 
 # Alerting
