--- a/public/app/plugins/datasource/cloud-monitoring/package.json
+++ b/public/app/plugins/datasource/cloud-monitoring/package.json
@@ -5,12 +5,12 @@
   "version": "12.4.0-pre",
   "dependencies": {
     "@emotion/css": "11.13.5",
-    "@grafana/data": "12.4.0-pre",
+    "@grafana/data": "workspace:*",
     "@grafana/google-sdk": "0.3.5",
     "@grafana/plugin-ui": "^0.11.0",
-    "@grafana/runtime": "12.4.0-pre",
-    "@grafana/schema": "12.4.0-pre",
-    "@grafana/ui": "12.4.0-pre",
+    "@grafana/runtime": "workspace:*",
+    "@grafana/schema": "workspace:*",
+    "@grafana/ui": "workspace:*",
     "debounce-promise": "3.1.2",
     "fast-deep-equal": "^3.1.3",
     "i18next": "^25.0.0",
@@ -26,8 +26,8 @@
     "tslib": "2.8.1"
   },
   "devDependencies": {
-    "@grafana/e2e-selectors": "12.4.0-pre",
-    "@grafana/plugin-configs": "12.4.0-pre",
+    "@grafana/e2e-selectors": "workspace:*",
+    "@grafana/plugin-configs": "workspace:*",
     "@testing-library/dom": "10.4.1",
     "@testing-library/jest-dom": "6.6.4",
     "@testing-library/react": "16.3.0",
