--- a/public/app/plugins/datasource/grafana-pyroscope-datasource/package.json
+++ b/public/app/plugins/datasource/grafana-pyroscope-datasource/package.json
@@ -5,10 +5,10 @@
   "version": "12.4.0-pre",
   "dependencies": {
     "@emotion/css": "11.13.5",
-    "@grafana/data": "12.4.0-pre",
-    "@grafana/runtime": "12.4.0-pre",
-    "@grafana/schema": "12.4.0-pre",
-    "@grafana/ui": "12.4.0-pre",
+    "@grafana/data": "workspace:*",
+    "@grafana/runtime": "workspace:*",
+    "@grafana/schema": "workspace:*",
+    "@grafana/ui": "workspace:*",
     "fast-deep-equal": "^3.1.3",
     "lodash": "^4.17.23",
     "monaco-editor": "0.34.1",
@@ -20,7 +20,7 @@
     "tslib": "2.8.1"
   },
   "devDependencies": {
-    "@grafana/plugin-configs": "12.4.0-pre",
+    "@grafana/plugin-configs": "workspace:*",
     "@testing-library/dom": "10.4.1",
     "@testing-library/jest-dom": "6.6.4",
     "@testing-library/react": "16.3.0",
