--- a/public/app/plugins/datasource/loki/package.json
+++ b/public/app/plugins/datasource/loki/package.json
@@ -5,13 +5,13 @@
   "version": "12.4.0-pre",
   "dependencies": {
     "@emotion/css": "11.13.5",
-    "@grafana/data": "12.4.0-pre",
+    "@grafana/data": "workspace:*",
     "@grafana/lezer-logql": "0.2.9",
     "@grafana/llm": "1.0.1",
     "@grafana/monaco-logql": "^0.0.8",
-    "@grafana/runtime": "12.4.0-pre",
-    "@grafana/schema": "12.4.0-pre",
-    "@grafana/ui": "12.4.0-pre",
+    "@grafana/runtime": "workspace:*",
+    "@grafana/schema": "workspace:*",
+    "@grafana/ui": "workspace:*",
     "d3-random": "^3.0.1",
     "lodash": "^4.17.23",
     "micro-memoize": "^4.1.2",
@@ -24,8 +24,8 @@
     "uuid": "11.1.0"
   },
   "devDependencies": {
-    "@grafana/e2e-selectors": "12.4.0-pre",
-    "@grafana/plugin-configs": "12.4.0-pre",
+    "@grafana/e2e-selectors": "workspace:*",
+    "@grafana/plugin-configs": "workspace:*",
     "@testing-library/dom": "10.4.1",
     "@testing-library/jest-dom": "6.6.4",
     "@testing-library/react": "16.3.0",
