Add Cleanup step to build

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,6 +31,16 @@ jobs:
     runs-on: ubuntu-latest
     environment: jfrog-ci
     steps:
+      - name: Free up disk space
+        run: |
+          df -h
+          sudo rm -rf /usr/local/lib/android
+          sudo rm -rf /usr/share/dotnet
+          sudo rm -rf /opt/ghc
+          sudo rm -rf /opt/hostedtoolcache/CodeQL
+          sudo docker image prune -a --force
+          sudo docker builder prune -a --force
+          df -h
       - uses: actions/checkout@v2
       - name: Login to Artifactory
         uses: docker/login-action@v1
