--- a/public/app/plugins/datasource/grafana-pyroscope-datasource/package.json
+++ b/public/app/plugins/datasource/grafana-pyroscope-datasource/package.json
@@ -20,6 +20,7 @@
     "tslib": "2.8.1"
   },
   "devDependencies": {
+    "@grafana/e2e-selectors": "workspace:*",
     "@grafana/plugin-configs": "workspace:*",
     "@testing-library/dom": "10.4.1",
     "@testing-library/jest-dom": "6.6.4",
